src/argocd/bootstrap-resources/nodered/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  labels:
    app.kubernetes.io/name: nodered
spec:
  replicas: 1
  revisionHistoryLimit: 0 
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nodered
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nodered
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: nodered
        image: docker.io/nodered/node-red:4.0.8
        ports:
          - containerPort: 1880
            name: http
            protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nodered-data-pvc
