src/argocd/bootstrap-resources/nodered/services.yml
apiVersion: v1
kind: Service
metadata:
  name: nodered
spec:
  selector:
    app.kubernetes.io/name: nodered
  ports:
  - name: http
    protocol: TCP
    port: 1880
    targetPort: http
