src/argocd/bootstrap-resources/nodered/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nodered
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nr.ryanb.tv`)
      kind: Rule
      services:
        - name: nodered
          kind: Service
          port: http
  tls: {}
